fix: dark mode

--- a/src/mobile/components/Navigation/Navigation.module.scss
+++ b/src/mobile/components/Navigation/Navigation.module.scss
@@ -32,3 +32,9 @@
 .selected {
   opacity: initial;
 }
+
+@media (prefers-color-scheme: dark) {
+  .container {
+    color: $color-secondary;
+  }
+}
